Some color/alignment fixes and store the user preference added

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,6 @@
     --text-color-blue: hsl(228, 34%, 66%);
     --text-color-white: hsl(0, 0%, 100%);
 
-    --toggle-label: hsl(228, 34%, 66%);
     --toggle-color-bg-1: hsl(210, 78%, 56%);
     --toggle-color-bg-2: hsl(146, 68%, 55%);
     --toggle-color-bg: hsl(0, 0%, 100%);
@@ -33,7 +32,6 @@
     --text-color-blue: hsl(228, 12%, 44%);
     --text-color-white: hsl(230, 17%, 14%);
 
-    --toggle-label: hsl(230, 22%, 74%);
     --toggle-color-bg: hsl(230, 22%, 74%);
 }
 
@@ -49,7 +47,6 @@ html {
 body {
     font-family: "Inter", sans-serif;
     margin: 0;
-    /* padding: 40px 25px 15px; */
     background-color: var(--bg-color);
     color: var(--text-color-blue);
 }
@@ -67,13 +64,13 @@ img {
 /* ---HEADER --- */
 .header {
     background-color: var(--bg-color-top);
-    padding: 34px 25px 40px;
+    padding: 36px 25px 40px;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
 }
 .header__title {
     font-size: 1.7rem;
-    font-weight: 600;
+    font-weight: 700;
     margin-bottom: 0.2em;
     color: var(--text-color-white);
 }
@@ -96,10 +93,10 @@ img {
 }
 .darklight__label {
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 700;
     order: -1;
     transition: 0.4s;
-    color: var(--toggle-label);
+    color: var(--text-color-blue);
 }
 .toggle {
     width: 48px;
@@ -228,7 +225,7 @@ img {
 .overview__title {
     color: var(--text-color-white);
     font-size: 1.7rem;
-    font-weight: 600;
+    font-weight: 700;
     letter-spacing: 0.05em;
     margin-bottom: 1.3em;
 }
@@ -283,10 +280,8 @@ img {
 
 /* --- FOOTER --- */
 .footer {
-    height: 80px;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
     padding-bottom: 15px;
 }
 .attribution {
@@ -299,7 +294,7 @@ img {
 
 @media (726px <= width) {
     .header {
-        padding: 34px 50px 80px;
+        padding: 36px 50px 80px;
     }
     .header-container {
         display: grid;
@@ -326,7 +321,7 @@ img {
         grid-area: darklight;
         align-self: center;
         justify-content: flex-end;
-        margin-bottom: 0;
+        margin-bottom: -0.8em;
     }
     .darklight__label {
         margin-right: 1em;
@@ -341,7 +336,7 @@ img {
 
     /* --- PRINCIPAL SECTION --- */
     .principal {
-        margin-bottom: 3.4em;
+        margin-bottom: 3.3em;
     }
     .principal-card {
         width: min(100%, 275px);
@@ -371,7 +366,7 @@ img {
     .header {
         padding-left: 83px;
         padding-right: 83px;
-        padding-bottom: 135px;
+        padding-bottom: 134px;
     }
     .header-container,
     .overview__title {
